<resources>
    <!-- Name of app-->
    <string name="app_name">Board Game Calculator</string>

    <!-- Game names for menu -->
    <string name="alhambra_game_name">Alhambra</string>
    <string name="ascension_game_name">Ascension</string>
    <string name="catan_game_name">Settlers of Catan</string>
    <string name="caverna_game_name">Caverna</string>
    <string name="eclipse_game_name">Eclipse</string>
    <string name="sevenwonders_game_name">7 Wonders</string>
    <string name="takenoko_game_name">Takenoko</string>
    <string name="singlepoint_game_name">Single Point Games</string>
    <string name="menu_title">Menu</string>

    <!-- SevenWonders Player info for expandable list banner-->
    <string name="player_name">Player Name</string>
    <string name="score">Score:</string>
    <string name="defaultScoreAmount">0</string>
    <string name="military_conflicts">Military Conflicts:</string>
    <string name="treasury_contents">Treasury Contents:</string>
    <string name="wonders">Wonders:</string>
    <string name="civilianStructures">Civilian Structures:</string>
    <string name="scientific_structures">Scientific Structures:</string>
    <string name="commercialStructures">Commercial Structures:</string>
    <string name="guilds">Guilds:</string>
    <string name="identicalSymbols">Identical Symbol Sets:</string>
    <string name="differentSymbols">Diff Symbol Sets:</string>
    <string name="protractorSets">Protractor Sets:</string>
    <string name="tabletSets">Tablet Sets:</string>
    <string name="cogSets">Cog Sets:</string>
    <string name="sevenwonders_empty_view_title">The game is set up…</string>
    <string name="sevenwonders_empty_view_subtitle">Add the players and start playing!</string>
    <string name="unknown_player_name">Player</string>
    <string name="editor_activity_title_new_player">Add a Player</string>
    <string name="editor_activity_title_edit_player">Edit Player Scores</string>
    <string name="insert_player_failed">Player save failed</string>
    <string name="insert_player_successful">Player save was successful</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Player?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_player_failed">Player Deletion Failed</string>
    <string name="editor_delete_player_successful">The Player was deleted</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
</resources>
